# knowledgebase_copilot

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: version-bump.yml
docs/: agentic_flow.md  md_checking_rules.md  skill_design.md  useful_commands.md
scripts/: DocumentIndex.ipynb  audio_splitter.py  audio_summarizer.py  chat.py  cloud_audio_summarizer.py  extract_audio.py  extract_audio.sh  md_image_links_reformat.sh  parse_openai_webpage.py  pdf_to_md.py  process_md.py  retrieval.py  silence_detector.py  silence_detector.sh  test_ollama_embeds.py  text_merger.py  whisper_to_srt.py  youtube_download.py
src/: agent.py  batch_ocr.py  check_md_hierarchy.py  convert_md_to_pdf.py  ocr_graphite.py  process_md.py  process_openai.py  prompts.py
src/mindbase_layer/: retrieve_md.py
src/utils/: audio.py  formatting.py  llm_adapter.py  pdf.py  retrieve.py  retrieve_md.py  youtube.py
